--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,5 @@
 # Symfony application's path (absolute or relative)
-SYMFONY_APP_PATH=/var/www/path/to/symfony/folder
+SYMFONY_APP_PATH=./../backend
 
 # MySQL
 MYSQL_ROOT_PASSWORD=root
