php modules, start script, xdebug setting

--- a/.env.dist
+++ b/.env.dist
@@ -1,17 +1,30 @@
-# Symfony application's path (absolute or relative)
-SYMFONY_APP_PATH=./../backend
+# [GENERAL]
+WORK_DIR_PATH=/home/vs/workspace/www/symfony/temp/standard
 
-# MySQL
+
+
+###################
+#######MySQL#######
+###################
+# [Users setting]
 MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=symfony
-MYSQL_USER=symfony
-MYSQL_PASSWORD=symfony
+MYSQL_DATABASE=vs
+MYSQL_USER=vs
+MYSQL_PASSWORD=vs
 
-# Xdebug
-XDEBUG_ENABLE=1
 
-# Timezone
-PHP_TIMEZONE=Europe/Oslo
 
-# Memory limit
-MEMORY_LIMIT=1024M
+###################
+########PHP########
+###################
+
+# [Mods]
+#XDEBUG_ENABLE=0
+
+# [Configuration]
+#PHP_TIMEZONE=Europe/Kiev
+#MEMORY_LIMIT=512M
+
+# [Project information]
+#IS_SYMFONY_2=0
+#IS_SYMFONY_3=0
