--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,15 +1,15 @@
 FROM debian:jessie
 
-MAINTAINER Maxence POUTORD <maxence.poutord@gmail.com>
+MAINTAINER Vitalii Sydorenko <vetal.sydo@gmail.com>
 
 RUN apt-get update && apt-get install -y \
     nginx
 
 ADD nginx.conf /etc/nginx/
-ADD symfony.conf /etc/nginx/sites-available/
+ADD default.conf /etc/nginx/sites-available/
 
-RUN ln -s /etc/nginx/sites-available/symfony.conf /etc/nginx/sites-enabled/symfony
 RUN rm /etc/nginx/sites-enabled/default
+RUN ln -s /etc/nginx/sites-available/default.conf /etc/nginx/sites-enabled/default
 
 RUN echo "upstream php-upstream { server php:9000; }" > /etc/nginx/conf.d/upstream.conf
 
